--- a/RobotEditor/View/MainWindow.xaml
+++ b/RobotEditor/View/MainWindow.xaml
@@ -389,7 +389,7 @@
                     Content="Start comparison"
                     Margin="5"
                     Width="150"
-                    BindingGroup="{Binding Compare}" />
+                    Command="{Binding Compare}" />
             </StackPanel>
         </Grid>
     </AdornerDecorator>
