--- a/RobotEditor/View/ResultWindow.xaml
+++ b/RobotEditor/View/ResultWindow.xaml
@@ -9,153 +9,336 @@
     mc:Ignorable="d"
     d:DataContext="{d:DesignInstance Type=viewModel:RobotViewModel, IsDesignTimeCreatable=false}"
     Title="ResultWindow"
-    Height="630"
-    Width="881"
-    MinWidth="530"
-    MinHeight="630">
+    Height="600"
+    Width="800"
+    SizeChanged="ResultWindow_SizeChanged">
+    <AdornerDecorator>
+        <Grid
+            Name="mainGrid">
+            <Grid.Resources>
+                <Style
+                    TargetType="Button">
+                    <Setter
+                        Property="Margin"
+                        Value="5,0,5,5" />
+                    <Setter
+                        Property="VerticalAlignment"
+                        Value="Center" />
+                    <Setter
+                        Property="Padding"
+                        Value="3" />
+                </Style>
+                <Style
+                    TargetType="CheckBox">
+                    <Setter
+                        Property="Margin"
+                        Value="5,0,5,5" />
+                    <Setter
+                        Property="VerticalAlignment"
+                        Value="Center" />
+                </Style>
+                <Style
+                    TargetType="ComboBox">
+                    <Setter
+                        Property="Margin"
+                        Value="5,0,5,5" />
+                    <Setter
+                        Property="VerticalAlignment"
+                        Value="Center" />
+                </Style>
+                <Style
+                    TargetType="Slider">
+                    <Setter
+                        Property="Margin"
+                        Value="5,5,0,5" />
+                    <Setter
+                        Property="VerticalAlignment"
+                        Value="Center" />
+                </Style>
+                <Style
+                    TargetType="TextBox">
+                    <Setter
+                        Property="Margin"
+                        Value="5,5,5,5" />
+                    <Setter
+                        Property="VerticalAlignment"
+                        Value="Center" />
+                    <Setter
+                        Property="VerticalContentAlignment"
+                        Value="Center" />
+                </Style>
+                <Style
+                    TargetType="DataGrid">
+                    <Setter
+                        Property="Margin"
+                        Value="5,5,5,5" />
+                    <Setter
+                        Property="Background"
+                        Value="Transparent" />
+                </Style>
+                <Style
+                    TargetType="{x:Type DataGridCell}">
+                    <Style.Triggers>
+                        <Trigger
+                            Property="IsSelected"
+                            Value="true">
+                            <Setter
+                                Property="Background"
+                                Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
+                            <Setter
+                                Property="Foreground"
+                                Value="{DynamicResource {x:Static SystemColors.HighlightTextBrushKey}}" />
+                            <Setter
+                                Property="BorderBrush"
+                                Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
+                        </Trigger>
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition
+                                    Binding="{Binding RelativeSource={RelativeSource Self}, Path=IsSelected}"
+                                    Value="True" />
+                                <Condition
+                                    Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DataGrid}, Path=IsKeyboardFocusWithin}"
+                                    Value="False" />
+                            </MultiDataTrigger.Conditions>
+                            <MultiDataTrigger.Setters>
+                                <Setter
+                                    Property="Background"
+                                    Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
+                                <Setter
+                                    Property="Foreground"
+                                    Value="{DynamicResource {x:Static SystemColors.HighlightTextBrushKey}}" />
+                                <Setter
+                                    Property="BorderBrush"
+                                    Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
+                            </MultiDataTrigger.Setters>
+                        </MultiDataTrigger>
+                    </Style.Triggers>
+                </Style>
+                <Style
+                    TargetType="Border">
+                    <Setter
+                        Property="Margin"
+                        Value="5,0,5,0" />
+                </Style>
+                <Style
+                    TargetType="{x:Type h:HelixViewport3D}">
+                    <Setter
+                        Property="Margin"
+                        Value="6,1,6,1" />
+                </Style>
+            </Grid.Resources>
 
-    <Grid
-        HorizontalAlignment="Left"
-        Height="586"
-        Margin="10,10,0,0"
-        VerticalAlignment="Top"
-        Width="861">
-        <Button
-            x:Name="button_Start"
-            Content="Start comparison"
-            HorizontalAlignment="Left"
-            Margin="633,255,0,0"
-            VerticalAlignment="Top"
-            Width="123"
-            Command="{Binding Start}" />
-        <h:HelixViewport3D
-            x:Name="view_Result"
-            CameraRotationMode="Trackball"
-            ModelUpDirection="0,1,0"
-            Margin="0,0,388,295"
-            ZoomExtentsWhenLoaded="True" />
-        <Button
-            x:Name="button_FitToView"
-            Content="Fit to view"
-            HorizontalAlignment="Left"
-            Margin="379,296,0,0"
-            VerticalAlignment="Top"
-            Width="94"
-            Command="{Binding FitToView}" />
-        <Slider
-            x:Name="slider_NoOfRobots"
-            HorizontalAlignment="Left"
-            Margin="547,184,0,0"
-            Width="220"
-            Maximum="8"
-            IsSnapToTickEnabled="True"
-            TickPlacement="BottomRight"
-            Minimum="2"
-            Height="22"
-            VerticalAlignment="Top"
-            Value="2"
-            SmallChange="2"
-            TickFrequency="2"
-            LargeChange="2" />
-        <TextBox
-            x:Name="textBox_NrOfRobots"
-            Text="{Binding Value, ElementName=slider_NoOfRobots, UpdateSourceTrigger=PropertyChanged}"
-            HorizontalAlignment="Left"
-            Margin="772,183,0,0"
-            Width="68"
-            Height="23"
-            VerticalAlignment="Top" />
-        <Label
-            x:Name="label_NoOfRobots"
-            Content="Number of robots:"
-            HorizontalAlignment="Left"
-            Margin="547,153,0,0"
-            VerticalAlignment="Top"
-            Width="114" />
-        <ComboBox
-            x:Name="comboBox_SearchMethod"
-            HorizontalAlignment="Left"
-            Margin="721,46,0,0"
-            VerticalAlignment="Top"
-            Width="119"
-            SelectedIndex="1">
-            <ListBoxItem
-                Content="CPLEX" />
-            <ListBoxItem
-                Content="DFS" />
-            <ListBoxItem
-                Content="Brute Force" />
-        </ComboBox>
-        <Label
-            x:Name="label_Method"
-            Content="Method:"
-            HorizontalAlignment="Left"
-            Margin="547,42,0,0"
-            VerticalAlignment="Top"
-            Width="114" />
-        <TextBox
-            x:Name="textBox_NrOfSearchCycles"
-            HorizontalAlignment="Left"
-            Margin="772,101,0,0"
-            Width="68"
-            Height="23"
-            VerticalAlignment="Top"
-            Text="150" />
-        <Label
-            x:Name="label_NoOfSearchCycles"
-            Content="Number of search cycles:"
-            HorizontalAlignment="Left"
-            Margin="547,97,0,0"
-            VerticalAlignment="Top"
-            Width="150" />
-        <DataGrid
-            x:Name="Robots_Grid"
-            HorizontalAlignment="Left"
-            Height="168"
-            Margin="0,343,0,0"
-            VerticalAlignment="Top"
-            Width="851"
-            ItemsSource="{Binding Booths}"
-            AutoGenerateColumns="False"
-            SelectedItem="{Binding SelectedRobot}"
-            SelectionMode="Single"
-            CanUserAddRows="False"
-            CanUserDeleteRows="False">
-            <DataGrid.Columns>
-                <DataGridTextColumn
-                    Header="Robot"
-                    Width="351"
-                    Binding="{Binding Path=RobotName, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                    IsReadOnly="true" />
-                <DataGridTextColumn
-                    Binding="{Binding Path=BestMatch, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                    IsReadOnly="true"
-                    ClipboardContentBinding="{x:Null}"
-                    Header="Best Match"
-                    Width="250" />
-                <DataGridTextColumn
-                    Binding="{Binding Path=ComputationTime, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
-                    IsReadOnly="true"
-                    ClipboardContentBinding="{x:Null}"
-                    Header="Computation time"
-                    Width="250" />
-            </DataGrid.Columns>
-        </DataGrid>
-        <Button
-            x:Name="button_OK"
-            Content="OK"
-            HorizontalAlignment="Left"
-            Margin="363,541,0,0"
-            VerticalAlignment="Top"
-            Width="123"
-            IsCancel="True" />
-        <GroupBox
-            Header="Settings"
-            HorizontalAlignment="Left"
-            Height="281"
-            Margin="530,10,0,0"
-            VerticalAlignment="Top"
-            Width="321" />
-    </Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition
+                    Width="*" />
+                <ColumnDefinition
+                    Width="Auto" />
+                <ColumnDefinition
+                    Width="Auto"
+                    MinWidth="200" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition
+                    Height="70*" />
+                <RowDefinition
+                    Height="Auto" />
+                <RowDefinition
+                    Height="30*" />
+                <RowDefinition
+                    Height="Auto" />
+            </Grid.RowDefinitions>
 
+            <Grid
+                Grid.Column="0"
+                Grid.Row="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition
+                        Height="*" />
+                    <RowDefinition
+                        Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <h:HelixViewport3D
+                    Grid.Row="0"
+                    x:Name="view_Result"
+                    CameraRotationMode="Trackball"
+                    ModelUpDirection="0,1,0"
+                    ZoomExtentsWhenLoaded="True" />
+                <Button
+                    Grid.Row="1"
+                    x:Name="button_FitToView"
+                    Content="Fit to view"
+                    Width="100"
+                    Command="{Binding FitToView}" />
+            </Grid>
+
+            <GridSplitter
+                Grid.Row="0"
+                Grid.Column="1"
+                ResizeDirection="Columns"
+                ResizeBehavior="PreviousAndNext"
+                VerticalAlignment="Stretch"
+                Width="5" />
+
+            <GroupBox
+                Grid.Column="2"
+                Grid.Row="0"
+                HorizontalAlignment="Stretch"
+                HorizontalContentAlignment="Stretch"
+                Header="Settings">
+                <StackPanel
+                    Grid.IsSharedSizeScope="True"
+                    HorizontalAlignment="Stretch"
+                    Orientation="Vertical">
+
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition
+                                Width="Auto"
+                                SharedSizeGroup="Label" />
+                            <ColumnDefinition
+                                Width="*" />
+                        </Grid.ColumnDefinitions>
+
+                        <Label
+                            Grid.Column="0"
+                            x:Name="label_Method"
+                            Content="Method:" />
+                        <ComboBox
+                            Grid.Column="1"
+                            HorizontalAlignment="Stretch"
+                            x:Name="comboBox_SearchMethod"
+                            SelectedIndex="1">
+                            <ListBoxItem
+                                Content="CPLEX" />
+                            <ListBoxItem
+                                Content="DFS" />
+                            <ListBoxItem
+                                Content="Brute Force" />
+                        </ComboBox>
+                    </Grid>
+
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition
+                                Width="Auto"
+                                SharedSizeGroup="Label" />
+                            <ColumnDefinition
+                                Width="*" />
+                        </Grid.ColumnDefinitions>
+
+                        <Label
+                            Grid.Column="0"
+                            x:Name="label_NoOfSearchCycles"
+                            Content="Number of search cycles:" />
+                        <TextBox
+                            Grid.Column="1"
+                            x:Name="textBox_NrOfSearchCycles"
+                            Text="150" />
+                    </Grid>
+
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition
+                                Width="Auto"
+                                SharedSizeGroup="Label" />
+                            <ColumnDefinition
+                                Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition
+                                Height="Auto" />
+                            <RowDefinition
+                                Height="Auto" />
+                        </Grid.RowDefinitions>
+
+                        <Label
+                            Grid.Column="0"
+                            Grid.Row="0"
+                            x:Name="label_NoOfRobots"
+                            Content="Number of robots:" />
+                        <TextBox
+                            Grid.Column="1"
+                            Grid.Row="0"
+                            x:Name="textBox_NrOfRobots"
+                            Text="{Binding Value, ElementName=slider_NoOfRobots, UpdateSourceTrigger=PropertyChanged}" />
+                        <Slider
+                            Grid.Column="0"
+                            Grid.ColumnSpan="2"
+                            Grid.Row="1"
+                            HorizontalAlignment="Stretch"
+                            HorizontalContentAlignment="Stretch"
+                            x:Name="slider_NoOfRobots"
+                            Maximum="8"
+                            IsSnapToTickEnabled="True"
+                            TickPlacement="BottomRight"
+                            Minimum="2"
+                            Value="2"
+                            SmallChange="2"
+                            TickFrequency="2"
+                            LargeChange="2" />
+                    </Grid>
+
+                    <Button
+                        x:Name="button_Start"
+                        Content="Start comparison"
+                        IsDefault="True"
+                        Width="140"
+                        Command="{Binding Start}" />
+                </StackPanel>
+            </GroupBox>
+
+            <GridSplitter
+                Grid.Row="1"
+                Grid.Column="0"
+                Grid.ColumnSpan="3"
+                ResizeDirection="Rows"
+                HorizontalAlignment="Stretch"
+                Height="5" />
+
+            <DataGrid
+                Grid.Column="0"
+                Grid.ColumnSpan="3"
+                Grid.Row="2"
+                x:Name="Robots_Grid"
+                ItemsSource="{Binding Booths}"
+                AutoGenerateColumns="False"
+                SelectedItem="{Binding SelectedRobot}"
+                SelectionMode="Single"
+                CanUserAddRows="False"
+                CanUserDeleteRows="False">
+                <DataGrid.Columns>
+                    <DataGridTextColumn
+                        Header="Robot"
+                        Width="351"
+                        Binding="{Binding Path=RobotName, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
+                        IsReadOnly="true" />
+                    <DataGridTextColumn
+                        Binding="{Binding Path=BestMatch, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
+                        IsReadOnly="true"
+                        ClipboardContentBinding="{x:Null}"
+                        Header="Best Match"
+                        Width="250" />
+                    <DataGridTextColumn
+                        Binding="{Binding Path=ComputationTime, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"
+                        IsReadOnly="true"
+                        ClipboardContentBinding="{x:Null}"
+                        Header="Computation time"
+                        Width="250" />
+                </DataGrid.Columns>
+            </DataGrid>
+
+            <Grid
+                Grid.Column="0"
+                Grid.ColumnSpan="3"
+                Grid.Row="3">
+                <Button
+                    x:Name="button_OK"
+                    Content="OK"
+                    Width="100"
+                    IsCancel="True" />
+            </Grid>
+        </Grid>
+    </AdornerDecorator>
 </Window>
