--- a/RobotEditor/View/RobotValues.xaml
+++ b/RobotEditor/View/RobotValues.xaml
@@ -10,43 +10,102 @@
     mc:Ignorable="d"
     d:DataContext="{d:DesignInstance Type=viewModel:ResultViewModel, IsDesignTimeCreatable=false}"
     Title="RobotValues"
-    Height="296"
-    Width="1147.4">
-    <Window.Resources>
-        <ObjectDataProvider
-            x:Key="JTypes"
-            MethodName="GetValues"
-            ObjectType="{x:Type sys:Enum}">
-            <ObjectDataProvider.MethodParameters>
-                <x:Type
-                    TypeName="local:JointTypes" />
-            </ObjectDataProvider.MethodParameters>
-        </ObjectDataProvider>
-    </Window.Resources>
+    Height="300"
+    Width="1100"
+    MinWidth="300"
+    MinHeight="200"
+    WindowStartupLocation="CenterOwner">
     <Grid>
-        <Button
-            x:Name="OK_Button"
-            Content="OK"
-            HorizontalAlignment="Left"
-            Margin="586,223,0,0"
-            VerticalAlignment="Top"
-            Width="75"
-            Click="OK_Button_Click" />
-        <Button
-            x:Name="Cancel_Button"
-            Content="Cancel"
-            HorizontalAlignment="Left"
-            Margin="446,223,0,0"
-            VerticalAlignment="Top"
-            Width="75"
-            IsCancel="True" />
+        <Grid.Resources>
+            <ObjectDataProvider
+                x:Key="JTypes"
+                MethodName="GetValues"
+                ObjectType="{x:Type sys:Enum}">
+                <ObjectDataProvider.MethodParameters>
+                    <x:Type
+                        TypeName="local:JointTypes" />
+                </ObjectDataProvider.MethodParameters>
+            </ObjectDataProvider>
+            <Style
+                TargetType="Button">
+                <Setter
+                    Property="Margin"
+                    Value="5,0,5,5" />
+                <Setter
+                    Property="VerticalAlignment"
+                    Value="Center" />
+                <Setter
+                    Property="Padding"
+                    Value="3" />
+            </Style>
+            <Style
+                TargetType="DataGrid">
+                <Setter
+                    Property="Margin"
+                    Value="5,5,5,5" />
+                <Setter
+                    Property="Background"
+                    Value="Transparent" />
+            </Style>
+            <Style
+                TargetType="{x:Type DataGridCell}">
+                <Style.Triggers>
+                    <Trigger
+                        Property="IsSelected"
+                        Value="true">
+                        <Setter
+                            Property="Background"
+                            Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
+                        <Setter
+                            Property="Foreground"
+                            Value="{DynamicResource {x:Static SystemColors.HighlightTextBrushKey}}" />
+                        <Setter
+                            Property="BorderBrush"
+                            Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
+                    </Trigger>
+                    <MultiDataTrigger>
+                        <MultiDataTrigger.Conditions>
+                            <Condition
+                                Binding="{Binding RelativeSource={RelativeSource Self}, Path=IsSelected}"
+                                Value="True" />
+                            <Condition
+                                Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DataGrid}, Path=IsKeyboardFocusWithin}"
+                                Value="False" />
+                        </MultiDataTrigger.Conditions>
+                        <MultiDataTrigger.Setters>
+                            <Setter
+                                Property="Background"
+                                Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
+                            <Setter
+                                Property="Foreground"
+                                Value="{DynamicResource {x:Static SystemColors.HighlightTextBrushKey}}" />
+                            <Setter
+                                Property="BorderBrush"
+                                Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}" />
+                        </MultiDataTrigger.Setters>
+                    </MultiDataTrigger>
+                </Style.Triggers>
+            </Style>
+        </Grid.Resources>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition
+                Width="*" />
+            <ColumnDefinition
+                Width="Auto" />
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition
+                Height="*" />
+            <RowDefinition
+                Height="Auto" />
+        </Grid.RowDefinitions>
+
         <DataGrid
+            Grid.Column="0"
+            Grid.Row="0"
             x:Name="DHParam_Grid"
-            HorizontalAlignment="Left"
-            Height="174"
-            Margin="10,10,0,0"
-            VerticalAlignment="Top"
-            Width="946"
             ItemsSource="{Binding Path=Joints}"
             AutoGenerateColumns="False"
             SelectedItem="{Binding Path=SelectedJoint}"
@@ -107,22 +166,43 @@
                     CanUserSort="False" />
             </DataGrid.Columns>
         </DataGrid>
-        <Button
-            x:Name="AddJoint_Button"
-            Content="Add Joint"
-            HorizontalAlignment="Left"
-            Margin="977,12,0,0"
-            VerticalAlignment="Top"
-            Width="139"
-            Command="{Binding Path=AddJoint}" />
-        <Button
-            x:Name="DeletJoint_Button"
-            Content="Delete Joint"
-            HorizontalAlignment="Left"
-            Margin="977,49,0,0"
-            VerticalAlignment="Top"
-            Width="139"
-            Command="{Binding Path=DeleteJoint}" />
+
+        <StackPanel
+            Grid.Column="1"
+            Grid.Row="0"
+            VerticalAlignment="Center"
+            Orientation="Vertical">
+            <Button
+                x:Name="AddJoint_Button"
+                Content="Add Joint"
+                Width="100"
+                Command="{Binding Path=AddJoint}" />
+            <Button
+                x:Name="DeletJoint_Button"
+                Content="Delete Joint"
+                Width="100"
+                Command="{Binding Path=DeleteJoint}" />
+        </StackPanel>
+
+        <StackPanel
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
+            Grid.Row="1"
+            HorizontalAlignment="Center"
+            Orientation="Horizontal">
+            <Button
+                x:Name="OK_Button"
+                Content="OK"
+                Width="100"
+                IsDefault="True"
+                Click="OK_Button_Click" />
+            <Button
+                x:Name="Cancel_Button"
+                Content="Cancel"
+                Margin="100,0,5,5"
+                Width="100"
+                IsCancel="True" />
+        </StackPanel>
 
     </Grid>
 </Window>
