--- a/RobotEditor/View/ResultWindow.xaml
+++ b/RobotEditor/View/ResultWindow.xaml
@@ -7,7 +7,7 @@
     xmlns:h="http://helix-toolkit.org/wpf"
     xmlns:viewModel="clr-namespace:RobotEditor.ViewModel"
     mc:Ignorable="d"
-    d:DataContext="{d:DesignInstance Type=viewModel:RobotViewModel, IsDesignTimeCreatable=false}"
+    d:DataContext="{d:DesignInstance Type=viewModel:ResultViewModel, IsDesignTimeCreatable=false}"
     Title="ResultWindow"
     Height="600"
     Width="800"
@@ -167,7 +167,8 @@
                     x:Name="view_Result"
                     CameraRotationMode="Trackball"
                     ModelUpDirection="0,1,0"
-                    ZoomExtentsWhenLoaded="True" />
+                    ZoomExtentsWhenLoaded="True"
+                    ItemsSource="{Binding Path=BoothModels}"/>
                 <Button
                     Grid.Row="1"
                     x:Name="button_FitToView"
