Implemented B&B Algorithm with: - NoGo Zones - Symmetry check - Various Lower Bound and Search Routines

--- a/RobotEditor/View/MainWindow.xaml
+++ b/RobotEditor/View/MainWindow.xaml
@@ -392,7 +392,7 @@
                 </StackPanel>
                 <Button
                     x:Name="button_Compare"
-                    Content="Start comparison"
+                    Content="Open Compare Window"
                     Margin="5"
                     Width="150"
                     Command="{Binding Compare}" />
